--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,10 @@
 
 body {
   margin: 0;
+  display: flex;
+  flex-direction: column;
   background-color: var(--cadet-blue);
+  min-height: 100vh;
 }
 
 /* header */
@@ -28,10 +31,12 @@ body {
 }
 
 .main {
+  flex-grow: 2;
   display: flex;
   flex-direction: row;
 }
 
+/* search and search history section */
 .search-history-container {
   width: 25%;
   margin-left: 8px;
@@ -68,55 +73,68 @@ body {
   color: var(--orange-red-crayola);
 }
 
+/* dashboard section */
 .weather-container {
-  justify-content: center;
-  width: 72%;
+  width: 70%;
   color: var(--beige);
+  margin-left: 5%;
+  margin-right: 2%;
 }
 
+/* main current weather section */
 .current-weather {
   display: flex;
   flex-direction: row;
   justify-content: right;
   color: var(--beige);
   text-align: center;
-  font-size: 0.8rem;
-  padding: 0 12px;
-  margin: 8px -1px;
+  font-size: 100%;
+  padding: 1% 3%;
+  margin: 2% -1px;
 }
 
 .weather-icon {
-  padding: 8px 10%;
-  margin-right: 18%;
-  height: 12rem;
-  width: auto;
-  justify-content: left;
+  padding: 1% 8%;
+  margin-right: 12%;
+  width: 40%;
+  height: auto;
 }
 
-.current-weather h1 {
-  font-size: 1.2rem;
+.current-weather-info h1,
+h2 {
+  font-size: 100%;
   color: var(--deep-space-sparkle);
 }
 
+/* bottom 5-day forecast section */
 .forecast-container {
   display: flex;
   flex-direction: row;
   justify-content: right;
-}
-
-.forecast-container h2 {
-  font-size: 0.9rem;
-  font-size: medium;
-  color: var(--deep-space-sparkle);
+  padding: 2% 0;
 }
 
 .forecast {
-  padding: 0 12px;
-  margin: 8px -1px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1% 2%;
+  margin: 2% -1px;
   text-align: center;
-  font-size: 0.8rem;
+  font-size: 80%;
   border-left: 2px solid var(--deep-space-sparkle);
   border-right: 2px solid var(--deep-space-sparkle);
+}
+
+.forecast-weather-info h2 {
+  font-size: 100%;
+  color: var(--deep-space-sparkle);
+}
+
+.small-weather-icon {
+  width: 100%;
+  height: auto;
+  padding: 8px 18px;
 }
 
 /* footer */
@@ -130,6 +148,7 @@ body {
 
 /* mobile viewport styles */
 @media screen and (max-width: 576px) {
+  .main,
   .forecast-container {
     display: flex;
     flex-direction: column;
@@ -137,8 +156,44 @@ body {
     width: 100%;
     margin-left: 0;
   }
+
+  .search-history-container {
+    width: 75%;
+  }
+
+  .weather-container {
+    width: 100%;
+    align-items: center;
+  }
+
+  .current-weather {
+    justify-content: center;
+    margin-right: 12px;
+  }
+
+  .weather-icon {
+    padding: 8px 20px;
+    margin-right: 0;
+    width: 60%;
+  }
+
+  .forecast {
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
+
+  .small-weather-icon {
+    height: 8rem;
+    width: auto;
+    padding: 8px 48px;
+  }
 }
 
-/* mobile viewport styles */
-@media screen and (max-width: 992px) {
-}
+/* small screen viewport styles */
+/* @media screen and (max-width: 992px) {
+  .weather-container {
+    width: 50%;
+  }
+} */
