--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,9 +104,9 @@ body {
 
 .weather-icon {
   padding: 1% 8%;
-  margin-right: 12%;
-  width: 40%;
-  height: auto;
+
+  width: 400px;
+  max-height: 250px;
 }
 
 .current-weather-info h1 {
@@ -123,7 +123,7 @@ body {
 
 span {
   background-color: var(--orange-red-crayola);
-  color: var(--beige);
+  color: var(--cadet-blue);
   font-size: 100%;
   font-weight: 400;
   padding: 2px 4px;
@@ -165,14 +165,18 @@ span {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0% 1% 2%;
-  margin: 0% -0.5%;
+  padding: 1% 4%;
+  margin: 3% -0%;
   margin-left: 0;
   text-align: center;
   font-size: 80%;
   font-weight: 200;
   border-left: 2px solid var(--deep-space-sparkle);
-  border-right: 2px solid var(--deep-space-sparkle);
+  /* border-right: 2px solid var(--deep-space-sparkle); */
+}
+
+.tomorrow {
+  border: none;
 }
 
 .forecast-weather-info h2 {
@@ -235,6 +239,10 @@ span {
     margin-right: 12%;
     padding: 0;
     border: none;
+  }
+
+  .forecast-weather-info h2 {
+    padding-right: 3%;
   }
 
   .small-weather-icon {
